[package]
name = "ace-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
cool_asserts = "2.0.3"
getset = "0.1.4"
miette = { version = "7.4.0", features = ["fancy"] }
nom = "7.1.3"
nom-supreme = "0.8.0"
nom_locate = "4.2.0"
paste = "1.0.15"
thiserror = "2.0.11"

[dev-dependencies]
semver = "1.0.24" # To be removed
